Saisie et vérification clé de licence fonctionnelle